# ctfscan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  LICENSE  README.md  SETUP_COMPLETE.md  pyproject.toml  requirements-dev.txt  setup.py  verify_structure.py
.github/workflows/: tests-and-deploy.yml
src/ctfscan/: __init__.py  cli.py  core.py
tests/: __init__.py  test_ctfscan.py
